--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,10 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "npx nodemon"
   },
   "keywords": [],
   "author": "",
@@ -14,11 +14,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mongodb": "^6.8.0",
     "mongoose": "^8.5.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
   },
   "type": "module"
-
 }
